# dfm-pattern-match

./: .gitignore  README.md  build.sh
backup/dfm-pattern-capture-enhanced/src/: DFMPatternCaptureApplication.cpp  DatabaseManager.cpp  GeometryProcessor.cpp  GeometryProcessor.h
backup/dfm-pattern-capture-enhanced2/: CMakeLists.txt
backup/dfm-pattern-capture-enhanced2/src/: CommandLineArgs.cpp  CommandLineArgs.h  DatabaseManager.h  LayoutFileReader.h  generate_test_gds.cpp  main.cpp
backup/dfm-pattern-capture-enhanced2/test/: expected_log.txt
dfm-pattern-capture/: CMakeLists.txt  Makefile  README.md
dfm-pattern-capture-enhanced/src/: Geometry.cpp  Geometry.h  LayoutFileReader.cpp  Utils.h
dfm-pattern-capture-enhanced2/src/: DFMPatternCaptureApplication.h  Geometry.cpp  Utils.cpp
dfm-pattern-capture-enhanced2/test/: expected_db.txt  regression_test.sh
dfm-pattern-capture-enhanced5/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
dfm-pattern-capture-enhanced5/src/: CommandLineArgs.cpp  CommandLineArgs.h  DFMPatternCaptureApplication.cpp  DFMPatternCaptureApplication.h  DatabaseManager.cpp.1  DatabaseManager.h.1  GeometryProcessor.cpp  Utils.cpp  Utils.h  generate_test_gds.cpp  main.cpp
dfm-pattern-capture-enhanced5/test/test_basic_1/: expected_db.txt  expected_log.txt  regression_test.sh
dfm-pattern-capture-enhanced5/test/test_spm/: regression_test.sh  regression_test_debug.sh  spm.gds  spm_expected_log.txt  test_output.txt
dfm-pattern-capture/src/: main.cpp
dfm_viewer/: CMakeLists.txt  Makefile  build.sh  changelog  dfm_viewer  dfm_viewer.pro  moc_databaseviewer.cpp  moc_gdsviewer.cpp  moc_mainwindow.cpp  moc_patterncapture.cpp  resources.qrc
dfm_viewer/src/: ZoomEventFilter.h  batchpatterncapture.cpp  batchpatterncapture.h  batchpatterncapture.ui  connectdbdialog.cpp  connectdbdialog.h  databaseviewer.cpp  databaseviewer.h  gdsviewer.cpp  gdsviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newDBinputdialog.cpp  newDBinputdialog.h  patterncapture.cpp  patterncapture.h
dfm_viewer/test/test_basic_1/: newDBinputdialog.cpp  regression_test.sh  test.gds
scripts/: concat.sh  concat_files.sh  concatenated_files.txt
shared/: DatabaseManager.cpp  DatabaseManager.h  Geometry.cpp  Geometry.h  LayoutFileReader.cpp  LayoutFileReader.h  Logging.cpp  Logging.h  PatternsDatabaseSchema.doc
